\name{ERSSANEWS}
\title{ERSSA NEWS}
\alias{ERSSA NEWS}
\encoding{UTF-8}


\section{Version 0.99.0}{\itemize{
\item
Codes ready for bioconductor submission

\item
Add additional example datasets
}}
