@@ -12,12 +12,12 @@ Description: The ERSSA package takes user supplied RNA-seq differential expressi
 	with their RNA-seq dataset.
 Depends: R (>= 3.5.0)
 Imports: 
-	edgeR (>= 3.20.6),
-	DESeq2 (>= 1.18.1),
+	edgeR (>= 3.23.2),
+	DESeq2 (>= 1.21.3),
 	ggplot2 (>= 2.2.1),
 	RColorBrewer (>= 1.1-2),
 	plyr (>= 1.8.4),
-	BiocParallel (>= 1.12.0),
+	BiocParallel (>= 1.15.5),
 	grDevices,
 	stats,
 	utils
