@@ -1,6 +1,7 @@
 ---
 author: "Zixuan Shao"
 date: "`r Sys.Date()`"
+title: "ERSSA: Empirical RNA-seq Sample Size Analysis"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteEngine{knitr::knitr}
@@ -13,22 +14,28 @@ vignette: >
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## Introduction
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+landing site
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r cars, eval=FALSE}
-summary(cars)
+## Installation
+
+
+## Quickstart
+
+
+## Detailed workflow
+
+
+## Built with
+```{r, echo=FALSE}
+sessionInfo()
 ```
 
-## Including Plots
 
-You can also embed plots, for example:
+## References
 
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+
